crates/opds-client/tests/snapshots/fixtures__standalone_entry_atom.snap
---
source: crates/opds-client/tests/fixtures.rs
expression: dump(&feed)
---
version: V1
title: The Go Programming Language
id: None
totals: Totals { total_results: None, items_per_page: None, start_index: None, current_page: None }
entry: The Go Programming Language | id=urn:isbn:9780134190440 authors=["Alan Donovan", "Brian Kernighan"] lang=Some("en") published=Some("2026-01-02") series=None
  ["alternate"] -> https://cat.example.com/opds/publication/gopl
  ["http://opds-spec.org/image"] -> https://cat.example.com/covers/gopl.jpg
  ["http://opds-spec.org/image/thumbnail"] -> https://cat.example.com/covers/gopl-t.jpg
  ["http://opds-spec.org/acquisition/buy"] -> https://cat.example.com/buy/gopl price=39.99 USD indirect=["application/vnd.readium.lcp.license.v1.0+json", "application/epub+zip"]
  ["http://opds-spec.org/acquisition/borrow"] -> https://cat.example.com/borrow/gopl availability=unavailable holds=Some(12) copies=Some(0)
  ["http://opds-spec.org/acquisition/open-access"] -> https://cat.example.com/dl/gopl.epub
